# yutnori

./: .gitignore  CMakeLists.txt  images.qrc  main.cpp
include/: board.h  board.hpp  dialog.h  dialog.hpp  game.h  game.hpp  manager.hpp  piece.h  piece.hpp  sign.h  sign.hpp  team.h  window.h
src/: board.cpp  dialog.cpp  game.cpp  piece.cpp  sign.cpp  team.cpp  window.cpp
